# ShelfLife

./: .env.bak  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  PROJECT  README.md  buildout.txt  dev_install.sh  go.mod  install.sh  main.go  shelflifeDockerfile
config/default/: kustomization.yaml
config/manager/: controller_manager_config.yaml
diag_scripts/: queries.sh
src/: .lib.rs.swo  .main.rs.swp  lib.rs  main.rs  protocol.rs
