[package]
name = "shelflife"
version = "1.3.0"
authors = ["wilnil"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dotenv = "0.14.1"
prettytable-rs = "0.8.0"
reqwest = "0.9.19"
serde = "1.0.97"
serde_yaml = "0.8.9"
serde_json = "1.0.40"
mongodb = "0.3.12"
chrono = { version = "0.4.7", features = ["serde"] }
lettre = "0.9"
lettre_email = "0.9"
lazy_static = "1.4.0"
regex = "1.3.7"
parking_lot = "0.10.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
log = "0.4.11"
log4rs = "0.13.0"
error-chain = "0.12.4"

[lib]
name = "shelflife"
path = "src/lib.rs"

[[bin]]
name = "shelflife"
path = "src/bin/main.rs"

